ui/src/styles.scss
/* ... */
.dropdown-menu{
  background-color: var(--bg-second-color);
  color: var(--font-color);
  .dropdown-item{
    color: var(--font-color);
  }
  .dropdown-item:hover{
    background-color: var(--bg-select-color);
  }
}

.branchLine {    
  stroke: var(--branch-line-color);
}

.commit{
  fill:var(--commit-circle-fill-color);
  &.selected-commit{
    fill:var(--selected-commit-fill-color);
  }
}

.commit_text{
  fill: var(--head-text-color);
}

.refText{
  fill: var(--ref-text-color);
}

.scroll-container{
  background-color: var(--scroll-container-color);
}

.star{
  color: var(--star-color);
}

.commit_hightlighted{
  stroke-width: 12px;
  stroke:#8eb68e;
  stroke-opacity: 0.5;
}

.react-datepicker{
  background-color: var(--bg-color);
  color: var(--font-color);
}

.react-datepicker__header{
  background-color: inherit;
  color: inherit;
}

.react-datepicker__current-month, .react-datepicker-time__header, .react-datepicker-year-header{
  color: inherit;
}

.react-datepicker__day-name, .react-datepicker__day, .react-datepicker__time-name{
  color: inherit;
}

.react-datepicker__day:hover, .react-datepicker__month-text:hover, .react-datepicker__quarter-text:hover, .react-datepicker__year-text:hover{
  background-color: var(--bg-select-color);
}

.react-datepicker__day--keyboard-selected, .react-datepicker__month-text--keyboard-selected, .react-datepicker__quarter-text--keyboard-selected, .react-datepicker__year-text--keyboard-selected{
  background-color: var(--bg-select-color);
}

.react-datepicker__year-dropdown, .react-datepicker__month-dropdown, .react-datepicker__month-year-dropdown{
  background-color: var(--bg-color);
  color: var(--font-color);
}

.react-datepicker__year-option:hover, .react-datepicker__month-option:hover, .react-datepicker__month-year-option:hover{
  background-color: var(--bg-select-color);
}

input[type=checkbox]{
  background-color: #fff;
}

.hover-danger:hover, .hover-danger:hover *{
  cursor: default;
  color: var(--gs-danger);
}

.hover-bg:hover{
  background-color: var(--hover-bg);
}

